fix done Arrows overlapping text

--- a/src/index.css
+++ b/src/index.css
@@ -44,13 +44,13 @@ code {
   margin-left: 20px;
 }
 
-.table-enter-leave .ant-table-tbody > tr,
-.table-enter-leave .ant-table-thead > tr {
+.table-enter-leave .ant-table-tbody>tr,
+.table-enter-leave .ant-table-thead>tr {
   transition: height 200ms ease;
 }
 
-.ant-table .ant-table-tbody > tr,
-.ant-table .ant-table-thead > tr {
+.ant-table .ant-table-tbody>tr,
+.ant-table .ant-table-thead>tr {
   transition: none;
 }
 
@@ -83,13 +83,15 @@ body .ant-select-dropdown.ant-select-dropdown--single.ant-select-dropdown-placem
 .cascader-customize .ant-cascader-menu {
   background: #fff;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-  border-right: none!important;
+  border-right: none !important;
   margin-right: 2px !important;
-  height: auto!important;
+  height: auto !important;
 }
-.cascader-customize .ant-cascader-menu:nth-child(2){
-  width: 290px;
+
+.cascader-customize .ant-cascader-menu:nth-child(2) {
+  /* width: 290px; */
 }
+
 .cascader-customize .ant-cascader-menu:first-child {
   border-radius: 0 !important;
 }
@@ -100,23 +102,25 @@ body .ant-select-dropdown.ant-select-dropdown--single.ant-select-dropdown-placem
 
 .cascader-customize .ant-cascader-menu-item {
   padding: 9px 35px 9px 15px !important;
-  color: #737d9c!important;  
+  color: #737d9c !important;
 }
 
 .cascader-customize .ant-cascader-menu-item:hover {
-  background: #e9eefe!important;
-  font-weight: 600;
+  background: #e9eefe !important;
+  text-shadow: 0.2px 0.2px 0 #737d9b, -0.2px -0.2px 0 #737d9b, -0.1px -0.1px 0 #737d9b;
+  font-weight: 400;
 }
 
 .cascader-customize .ant-cascader-menu-item-active:not(.ant-cascader-menu-item-disabled),
 .cascader-customize .ant-cascader-menu-item-active:not(.ant-cascader-menu-item-disabled):hover {
-  font-weight: 600;
-  background: #edeef2;
+  font-weight: 400;
+  text-shadow: 0.2px 0.2px 0 #737d9b, -0.2px -0.2px 0 #737d9b, -0.1px -0.1px 0 #737d9b;
+   background: #edeef2;
 }
 
 .cascader-customize .ant-cascader-menu-item-expand .ant-cascader-menu-item-expand-icon,
 .cascader-customize.ant-cascader-menu-item-expand .ant-cascader-menu-item-loading-icon {
-  right: 9px!important;
-  color: #072074!important;
-  font-size: 14px!important;
+  right: 9px !important;
+  color: #072074 !important;
+  font-size: 14px !important;
 }
